testdata/baselines/reference/submodule/compiler/jsdocTypedefBeforeParenthesizedExpression.errors.txt
test.js(13,14): error TS2304: Cannot find name 'NotADuplicateIdentifier'.
test.js(14,14): error TS2304: Cannot find name 'AlsoNotADuplicate'.


==== test.js (2 errors) ====
    // @ts-check
    /** @typedef {number} NotADuplicateIdentifier */
    
    (2 * 2);
    
    /** @typedef {number} AlsoNotADuplicate */
    
    (2 * 2) + 1;
    
    
    /**
     * 
     * @param a {NotADuplicateIdentifier}
                 ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'NotADuplicateIdentifier'.
     * @param b {AlsoNotADuplicate}
                 ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'AlsoNotADuplicate'.
     */
    function makeSureTypedefsAreStillRecognized(a, b) {}
    